projet fonctionnel avec tests